# resource-pool

./: ..wasi-browser.js  ..wasi.cjs  .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  browser.js  fast-pool-optimized.cjs  fast-pool.cjs  fast-pool.d.ts  fast-pool.ts  index.d.ts  index.js  index.wrapper.cjs  index.wrapper.d.ts  index.wrapper.mjs  package-lock.json  package.json  resource_pool.wasi-browser.js  resource_pool.wasi.cjs  run_tests.js  test-fast-pool.js  tsconfig.json
.github/workflows/: CI.yml
__test__/: pool.test.cjs  pool.test.mjs  tsconfig.json
__test__/cjs/: memory_leak_check.test.cjs  package-lock.json  package.json  pool.test.cjs
__test__/mjs/: memory_leak_check.test.mjs  package-lock.json  package.json  pool.test.mjs
benchmarks/: README.md  hyperfine.sh  package-lock.json  package.json  results.md  run-single.js  runner.js
benchmarks/competitors/: fast-resource-pool-native.js  fast-resource-pool.js  generic-object-pool-dynamic-use.js  generic-object-pool-dynamic.js  generic-object-pool-engine-use.js  generic-object-pool-engine.js  generic-object-pool-use.js  generic-object-pool.js  generic-pool-use.js  generic-pool.js  tarn-use.js  tarn.js
implementations/: index.cjs  index.d.ts  index.mjs
src/: dynamic-object-pool.ts  engine-object-pool.ts  fast_pool.rs  index.ts  lib.rs  pool.rs  static-object-pool.ts
src/internal/: base-pool.ts  interfaces.ts
test/: memory-leak-check.test.ts
test/basic/: create-pool.test.ts  dynamic-pool.test.ts  engine-pool.test.ts  pool-validation.test.ts  static-pool.test.ts
(+18 files in other folders)
