
[package]
authors = ["Vinícius Lojhan <vinicius@lojhan.com>"]
edition = "2021"
name    = "resource_pool"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "2", features = ["async", "napi4"] }
napi-derive = "2"
tokio       = { version = "1.49.0", features = ["sync"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
