
[package]
authors = ["Vinícius Lojhan <vinicius@lojhan.com>"]
edition = "2021"
name    = "resource_pool"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "3", features = ["async", "napi4"] }
napi-derive = "3"
parking_lot = { version = "0.12", features = ["send_guard"] }
tokio       = { version = "1", features = ["sync", "time", "macros", "rt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2"

[profile.release]
# Optimization settings for maximum performance
codegen-units = 1       # Maximizes optimization at cost of compile time
lto           = true    # Link Time Optimization
panic         = 'abort' # Reduces binary size and simplifies error handling
strip         = true    # Reduces binary size
